[gd_scene load_steps=6 format=3 uid="uid://dmgqdvonu5dnb"]

[ext_resource type="Texture2D" uid="uid://cit3w8ihb4nta" path="res://Assets/Textures/UI/Cross.png" id="2_cross"]
[ext_resource type="Script" uid="uid://ujt5gyq0085s" path="res://Scripts/UI/MissionMenu.gd" id="3_missionmenu"]

[sub_resource type="StyleBoxFlat" id="StyleBox_detail_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.85)

[sub_resource type="StyleBoxFlat" id="StyleBox_tab_active"]
bg_color = Color(0.2, 0.2, 0.25, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBox_tab_inactive"]
bg_color = Color(0.15, 0.15, 0.2, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8

[node name="MissionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("3_missionmenu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 245.0
offset_top = 79.0
offset_right = -224.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27225864, 0.25508255, 0.051393077, 0.7019608)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -690.0
offset_top = -440.0
offset_right = 710.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBox_detail_panel")

[node name="QuestName" type="Label" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 10.0
offset_right = 84.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Quest Panel"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 360.0
offset_bottom = 144.0
theme_override_constants/separation = 30

[node name="TabContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="MainMissionTab" type="Button" parent="MainPanel/VBoxContainer/TabContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBox_tab_active")
theme_override_styles/pressed = SubResource("StyleBox_tab_active")
text = "Main Mission"
flat = true

[node name="SubMissionTab" type="Button" parent="MainPanel/VBoxContainer/TabContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBox_tab_inactive")
theme_override_styles/pressed = SubResource("StyleBox_tab_inactive")
text = "Sub Mission"
flat = true

[node name="DescriptionLabel" type="Label" parent="MainPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "   Select a mission to view details..."
autowrap_mode = 3

[node name="MissionListContainer" type="ScrollContainer" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 201.0
offset_right = -70.0
offset_bottom = -199.0
grow_horizontal = 2
grow_vertical = 2

[node name="MissionListVBox" type="VBoxContainer" parent="MainPanel/MissionListContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CloseButton" type="TextureButton" parent="MainPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 100.0
grow_horizontal = 0
texture_normal = ExtResource("2_cross")
stretch_mode = 5

[node name="Reward And Objective" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30

[node name="RewardsSection" type="VBoxContainer" parent="MainPanel/Reward And Objective"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SectionTitle" type="Label" parent="MainPanel/Reward And Objective/RewardsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Reward"

[node name="RewardsContainer" type="VBoxContainer" parent="MainPanel/Reward And Objective/RewardsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
